fix alignment of form field

--- a/css/style.css
+++ b/css/style.css
@@ -67,16 +67,19 @@ header {
   justify-content: center;
 }
 .form-control {
+  width: 30%;
   margin: 10px 0;
+  display: inline-block;
+  text-align: end;
 }
 .form-input {
   border: none;
   outline: none;
   padding: 3px 5px;
-  width: 70%;
+  width: 50%;
 }
 #save-input {
-  width: 50%;
+  width: 30%;
 }
 h4 {
   text-align: center;
